--- a/code/.env
+++ b/code/.env
@@ -1,3 +1,3 @@
 # .env
-DISCORD_TOKEN=
-PERSPECTIVE_KEY=
+DISCORD_TOKEN=NzY5NjQ3ODI2NDI1NjEwMzEw.X5SEZQ.z8fEmX2okwBT8sOOypI-B5zEJ50
+PERSPECTIVE_KEY=AIzaSyAYNVg4luHD7zrIdQq8gMMjS3uA0QgnLhs
